--- a/html/tigre.html
+++ b/html/tigre.html
@@ -154,7 +154,7 @@
         <!-- Ejemplo de video -->
         <div class="media-title">Video del Tigre:</div>
         <video width="320" height="240" controls>
-            <source src="/video/tigre.mp4" type="video/mp4">
+            <source src="/video/Tigre Negro.mp4" type="video/mp4">
             Tu navegador no soporta el elemento de video.
         </video>
     </section>
