--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
         /* Estilo para el recuadro adicional */
         .extra-info {
             background-color: rgba(51, 51, 51, 0.8); /* Fondo oscuro con 80% opacidad */
-            color: white;
+            color: rgba(255, 255, 255, 0.681);
             padding: 20px;
             border-radius: 10px;
             max-width: 300px; /* Ajustar el tamaño del recuadro */
@@ -46,7 +46,7 @@
     </header>
 
     <section class="animal-grid">
-        <h2 style="color: #C0C0C0;">Explora Animales Exóticos</h2>
+        <h2 style="color: #c0c0c0;">Explora Animales Exóticos</h2>
     
         <!-- Cuadros con imágenes e información de los animales -->
         <div class="animal-card">
@@ -70,8 +70,8 @@
         </div>
     
         <div class="animal-card">
-            <a href="cobra.html">
-                <img src="/img/cobra.jpg" alt="Cobra Real">
+            <a href="Cobra.html">
+                <img src="/img/Cobra.jpeg" alt="Cobra Real">
                 <div class="animal-info">
                     <h3>Cobra Real</h3>
                     <p>Infórmate sobre la poderosa y temida cobra real.</p>
