--- a/html/index.html
+++ b/html/index.html
@@ -6,14 +6,13 @@
     <title>ExoVida Animal - Animales Exóticos</title>
     <link rel="stylesheet" href="/css/style.css">
     <style>
-        /* Estilo para el recuadro adicional */
         .extra-info {
-            background-color: rgba(51, 51, 51, 0.8); /* Fondo oscuro con 80% opacidad */
+            background-color: rgba(51, 51, 51, 0.8); 
             color: rgba(255, 255, 255, 0.681);
             padding: 20px;
             border-radius: 10px;
-            max-width: 300px; /* Ajustar el tamaño del recuadro */
-            margin: 20px auto; /* Centrar horizontalmente y agregar margen */
+            max-width: 300px;
+            margin: 20px auto;
             text-align: center;
         }
 
@@ -30,7 +29,6 @@
 </head>
 <body>
 
-    <!-- Hero Section con Logo centrado -->
     <header class="hero">
         <div class="logo">
             <img src="/img/logo.png" alt="Logo ExoVida Animal">
@@ -79,7 +77,6 @@
             </a>
         </div>
     
-        <!-- Recuadro adicional con información -->
         <section class="extra-info">
             <h1>Información Adicional</h1>
             <p>Los animales exóticos pueden tener hábitats variados y características fascinantes. Explorar y aprender sobre ellos ayuda a fomentar la conservación y la apreciación de la biodiversidad.</p>
