--- a/html/acerca.html
+++ b/html/acerca.html
@@ -6,14 +6,13 @@
     <title>Acerca de - Animales Exóticos</title>
     <link rel="stylesheet" href="/css/style.css">
     <style>
-        /* Estilo para la barra de navegación */
         header.animal-page {
             position: relative;
             text-align: center;
             color: white;
             background: url('/img/fondo8.jpg') no-repeat center center/cover;
             margin: 0;
-            box-shadow: 0 4px 10px rgba(141, 132, 132, 0.5); /* Sombra sutil en la parte inferior */
+            box-shadow: 0 4px 10px rgba(141, 132, 132, 0.5); 
         }
 
         header.animal-page nav {
@@ -41,21 +40,20 @@
         }
 
         header.animal-page nav ul li a:hover {
-            color: #58564e; /* Cambia el color del texto en hover */
+            color: #58564e; 
         }
 
-        /* Ajuste del tamaño de letra para una mejor lectura */
         main p {
-            font-size: 1.1em; /* Aumento leve del tamaño de fuente */
+            font-size: 1.1em; 
         }
 
         main h1 {
-            font-size: 2em; /* Tamaño de letra más grande para el título */
+            font-size: 2em; 
         }
     </style>
 </head>
 <body>
-    <header class="animal-page"> <!-- Aquí agregamos la clase animal-page -->
+    <header class="animal-page"> 
         <div class="logo">
             <img src="../img/logo.png" alt="Logo de la página">
         </div>
