--- a/html/contact.html
+++ b/html/contact.html
@@ -6,14 +6,13 @@
     <title>Contacto - Animales Exóticos</title>
     <link rel="stylesheet" href="/css/style.css">
     <style>
-        /* Estilo para la barra de navegación */
         header.animal-page {
             position: relative;
             text-align: center;
             color: white;
             background: url('/img/fondo8.jpg') no-repeat center center/cover;
             margin: 0;
-            box-shadow: 0 4px 10px rgba(141, 132, 132, 0.5); /* Sombra sutil en la parte inferior */
+            box-shadow: 0 4px 10px rgba(141, 132, 132, 0.5);
         }
 
         header.animal-page nav {
@@ -41,12 +40,12 @@
         }
 
         header.animal-page nav ul li a:hover {
-            color: #58564e; /* Cambia el color del texto en hover */
+            color: #58564e; 
         }
     </style>
 </head>
 <body>
-    <header class="animal-page"> <!-- Aquí agregamos la clase animal-page -->
+    <header class="animal-page"> 
         <div class="logo">
             <img src="../img/logo.png" alt="Logo de la página">
         </div>
@@ -63,14 +62,12 @@
         <section>
             <h1>Contacto</h1>
             
-            <!-- Logo de Instagram debajo del título de contacto -->
             <div style="text-align: left; margin-top: 10px;">
                 <a href="https://www.instagram.com/asociacion_ecovida_animal?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
                     <img src="/img/ig.jpg" alt="Instagram" style="width: 40px; height: 40px;">
                 </a>
             </div>
 
-            <!-- Texto adicional para pedir más información sobre animales -->
             <div style="margin-top: 10px;">
                 <p>Si desea obtener más información sobre algún animal exótico en particular, por favor complete el formulario indicando su nombre, correo electrónico y el nombre del animal que le interesa conocer más.</p>
             </div>
