--- a/html/loro.html
+++ b/html/loro.html
@@ -6,14 +6,13 @@
     <title>Loro Arcoíris - ExoVida Animal</title>
     <link rel="stylesheet" href="/css/style.css">
     <style>
-        /* Estilo para el header.hero en la página del Tigre de Bengala */
         header.animal-page {
             position: relative;
             text-align: center;
             color: white;
             background: url('/img/fondo8.jpg') no-repeat center center/cover;
             margin: 0;
-            box-shadow: 0 4px 10px rgba(141, 132, 132, 0.5); /* Sombra sutil en la parte inferior */
+            box-shadow: 0 4px 10px rgba(141, 132, 132, 0.5); 
         }
 
         header.animal-page nav {
@@ -41,18 +40,16 @@
         }
 
         header.animal-page nav ul li a:hover {
-            color: #58564e; /* Cambia el color del texto en hover */
+            color: #58564e; 
         }
 
-        /* Estilo para la sección de animales exóticos */
         .animal-section {
             padding: 40px;
-            background: url('/img/fondo1.jpg') no-repeat center center/cover; /* Fondo específico para la sección de animales */
-            background-color: #f5f5f5; /* Color de respaldo si la imagen no carga */
-            margin: 0; /* Asegura que no haya márgenes adicionales */
+            background: url('/img/fondo1.jpg') no-repeat center center/cover; 
+            background-color: #f5f5f5; 
+            margin: 0; 
         }
 
-        /* Estilo para el título de la sección de animales */
         .animal-section h2 {
             text-align: center;
             margin-bottom: 20px;
@@ -60,15 +57,13 @@
             color: white;
         }
 
-        /* Estilo para la imagen del animal */
         .imagen-animal {
             width: 100%;
-            max-width: 600px; /* Tamaño máximo para la imagen */
+            max-width: 600px; 
             display: block;
             margin: 0 auto 20px auto;
         }
 
-        /* Estilo para los textos de audio y video */
         .media-title {
             text-align: center;
             font-size: 1.2em;
@@ -76,28 +71,25 @@
             margin: 20px 0 10px;
         }
 
-        /* Estilo para centrar el audio y el video */
         audio, video {
             display: block;
             margin: 0 auto;
         }
 
-        /* Estilo para la información del tigre */
         .animal-info {
             padding: 20px;
-            background-color: #c7c6c6; /* Fondo oscuro para mejor contraste con el texto blanco */
+            background-color: #c7c6c6; 
             color: white;
             text-align: center;
             border-radius: 10px;
             margin: 0 auto;
-            max-width: 800px; /* Tamaño máximo del contenedor */
+            max-width: 800px; 
         }
 
         .animal-info p {
             font-size: 1.2em;
         }
 
-        /* Estilo para el footer */
         footer {
             text-align: center;
             padding: 10px;
@@ -105,7 +97,7 @@
             position: relative;
             bottom: 0;
             width: 100%;
-            margin: 0; /* Asegura que no haya márgenes adicionales */
+            margin: 0; 
         }
 
         footer p {
@@ -144,14 +136,12 @@
             <a href="https://atlasanimal.com/loro-arcoiris/" target="_blank" style="color: #81807d; text-decoration: underline;">Más información sobre el Loro Arcoíris</a>
         </div>
 
-        <!-- Ejemplo de audio -->
         <div class="media-title">Canto del loro Arcoíris:</div>
         <audio controls>
             <source src="/audio/canto-loro.mp3" type="audio/mpeg">
             Tu navegador no soporta el elemento de audio.
         </audio>
 
-        <!-- Ejemplo de video -->
         <div class="media-title">Video del Loro Arcoíris:</div>
         <video width="320" height="240" controls>
             <source src="/video/Pajaro Loco.mp4" type="video/mp4">
